[gd_scene load_steps=4 format=3 uid="uid://dn3hygwohims3"]

[ext_resource type="Script" uid="uid://bamyroceklnb" path="res://scripts/Player/interface/interfaceJoueur.gd" id="1_f81gc"]
[ext_resource type="Resource" uid="uid://wr2rrjw510by" path="res://Ressources/terrain/Grid.tres" id="2_f3ilc"]
[ext_resource type="Script" uid="uid://bchpfc7lkilwi" path="res://scripts/unites/general/interface/ConteneurPlacementPossibilite.gd" id="2_n46yd"]

[node name="interfaceJoueur" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_f81gc")
grid = ExtResource("2_f3ilc")

[node name="GestionnairePossibilite" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="ConteneurMenus" type="FlowContainer" parent="GestionnairePossibilite"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 1
offset_left = -4.0
offset_top = -27.0
offset_right = 34.0
offset_bottom = 5.0
alignment = 1
script = ExtResource("2_n46yd")

[node name="Rangee1" type="VBoxContainer" parent="GestionnairePossibilite/ConteneurMenus"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Menu" type="TextureButton" parent="GestionnairePossibilite/ConteneurMenus/Rangee1"]
visible = false
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2

[node name="Menu2" type="TextureButton" parent="GestionnairePossibilite/ConteneurMenus/Rangee1"]
visible = false
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="Rangee 2" type="VBoxContainer" parent="GestionnairePossibilite/ConteneurMenus"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 2

[node name="MenuSorts" type="TextureButton" parent="GestionnairePossibilite/ConteneurMenus/Rangee 2"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="MenuPlacementCarte" type="TextureButton" parent="GestionnairePossibilite/ConteneurMenus/Rangee 2"]
clip_children = 2
texture_filter = 1
clip_contents = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="noeudsTemp" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="GestionnairePossibilite/ConteneurMenus/Rangee 2/MenuPlacementCarte" to="." method="_on_menu_placement_carte_pressed"]
